--- a/publications.html
+++ b/publications.html
@@ -60,9 +60,17 @@
   <h2>Pollinator Conservation</h2>
   <ul style="padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
+    Süle, ..., <b>Phillips BB</b>, ..., et al. (2025). Pollinator-promoting interventions in European urban habitats - a synthesis. <i>Ecology Letters</i>. 
+    </li>
+    <li style="margin-bottom: 1rem;">
       Knapp JL & <b>Phillips BB</b> et al. (2021). Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation. 
       <i>People and Nature</i>, 3: 204-220. 
       <a href="https://doi.org/10.1002/pan3.10168">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      Shaw, <b>Phillips BB</b>, et al. (2020). Mass-flowering crops have a greater impact than semi-natural habitat on crop pollinators and pollen deposition. 
+      <i>Landscape Ecology</i>, 35: 513-527. 
+      <a href="https://doi.org/10.1007/s10980-019-00962-0">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
       <b>Phillips BB</b> et al. (2018). Drought reduces floral resources for pollinators. <i>Global Change Biology</i>, 24: 3226-3235. 
@@ -73,14 +81,6 @@
       <i>Basic and Applied Ecology</i>, 32: 66-76. 
       <a href="https://doi.org/10.1016/j.baae.2018.06.004">View publication</a>
     </li>
-    <li style="margin-bottom: 1rem;">
-      Shaw, <b>Phillips BB</b>, et al. (2020). Mass-flowering crops have a greater impact than semi-natural habitat on crop pollinators and pollen deposition. 
-      <i>Landscape Ecology</i>, 35: 513-527. 
-      <a href="https://doi.org/10.1007/s10980-019-00962-0">View publication</a>
-    </li>
-    <li style="margin-bottom: 1rem;">
-    Süle, ..., <b>Phillips BB</b>, ..., et al. (2025). Pollinator-promoting interventions in European urban habitats - a synthesis. <i>Ecology Letters</i>. 
-    </li>
   </ul>
     </div>
   </section>
@@ -89,6 +89,22 @@
   <div class="publications-box">
     <h2>Roads & Road Verges</h2>
   <ul style="padding: 0; margin-top: 1.5rem;">
+        <li style="margin-bottom: 1rem;">
+      <b>Phillips BB</b> et al. (2021). Spatial extent of road pollution: A national analysis. <i>Science of The Total Environment</i>, 773: 145589. 
+      <a href="https://doi.org/10.1016/j.scitotenv.2021.145589">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Phillips BB</b> et al. (2021). Road verge extent and habitat composition across Great Britain. <i>Landscape and Urban Planning</i>, 214: 104159. 
+      <a href="https://doi.org/10.1016/j.landurbplan.2021.104159">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Phillips BB</b> et al. (2021). Impacts of multiple pollutants on pollinator activity in road verges. <i>Journal of Applied Ecology</i>, 58: 1017-1029. 
+      <a href="https://doi.org/10.1111/1365-2664.13844">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Phillips BB</b> et al. (2020). Ecosystem service provision by road verges. <i>Journal of Applied Ecology</i>, 57: 488-501. 
+      <a href="https://doi.org/10.1111/1365-2664.13556">View publication</a>
+    </li>
     <li style="margin-bottom: 1rem;">
       <b>Phillips BB</b> et al. (2020). Enhancing road verges to aid pollinator conservation: a review. <i>Biological Conservation</i>, 250: 108687. 
       <a href="https://doi.org/10.1016/j.biocon.2020.108687">View publication</a>
@@ -97,22 +113,6 @@
       <b>Phillips BB</b> et al. (2019). Road verges support pollinators in agricultural landscapes, but are diminished by heavy traffic and summer cutting. 
       <i>Journal of Applied Ecology</i>, 56: 2316-2327. 
       <a href="https://doi.org/10.1111/1365-2664.13470">View publication</a>
-    </li>
-    <li style="margin-bottom: 1rem;">
-      <b>Phillips BB</b> et al. (2021). Impacts of multiple pollutants on pollinator activity in road verges. <i>Journal of Applied Ecology</i>, 58: 1017-1029. 
-      <a href="https://doi.org/10.1111/1365-2664.13844">View publication</a>
-    </li>
-    <li style="margin-bottom: 1rem;">
-      <b>Phillips BB</b> et al. (2021). Road verge extent and habitat composition across Great Britain. <i>Landscape and Urban Planning</i>, 214: 104159. 
-      <a href="https://doi.org/10.1016/j.landurbplan.2021.104159">View publication</a>
-    </li>
-    <li style="margin-bottom: 1rem;">
-      <b>Phillips BB</b> et al. (2020). Ecosystem service provision by road verges. <i>Journal of Applied Ecology</i>, 57: 488-501. 
-      <a href="https://doi.org/10.1111/1365-2664.13556">View publication</a>
-    </li>
-    <li style="margin-bottom: 1rem;">
-      <b>Phillips BB</b> et al. (2021). Spatial extent of road pollution: A national analysis. <i>Science of The Total Environment</i>, 773: 145589. 
-      <a href="https://doi.org/10.1016/j.scitotenv.2021.145589">View publication</a>
     </li>
   </ul>
     </div>
@@ -124,13 +124,13 @@
   <ul style="padding: 0; margin-top: 1.5rem;">
     ***EMILY TO ADD / ANY OTHER SECTIONS RELEVANT TO HER***
     <li style="margin-bottom: 1rem;">
-      <b>Duncan EM</b> et al. (Year). Title of marine plastic paper 1. <i>Journal Name.</i> <a href="#">View publication</a>
+      <b>Duncan EM</b> et al. (Year). Title of paper 1. <i>Journal Name.</i> <a href="#">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Duncan EM</b> et al. (Year). Title of marine plastic paper 2. <i>Journal Name.</i> <a href="#">View publication</a>
+      <b>Duncan EM</b> et al. (Year). Title of paper 2. <i>Journal Name.</i> <a href="#">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Duncan EM</b> et al. (Year). Title of marine plastic paper 3. <i>Journal Name.</i> <a href="#">View publication</a>
+      <b>Duncan EM</b> et al. (Year). Title of paper 3. <i>Journal Name.</i> <a href="#">View publication</a>
     </li>
   </ul>
     </div>
@@ -154,14 +154,14 @@
       <a href="https://doi.org/10.1002/pan3.10381">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      Knapp & <b>Phillips BB</b> et al. (2021). Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation. 
-      <i>People and Nature</i>, 3: 204-220. 
-      <a href="https://doi.org/10.1002/pan3.10168">View publication</a>
-    </li>
-    <li style="margin-bottom: 1rem;">
       <b>Phillips BB</b> et al. (2022). Harnessing practitioner knowledge to inform the conservation of a protected species, 
       the hazel dormouse <i>Muscardinus avellanarius</i>. <i>Ecological Solutions and Evidence</i>, 3: e12198. 
       <a href="https://doi.org/10.1002/2688-8319.12198">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      Knapp & <b>Phillips BB</b> et al. (2021). Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation. 
+      <i>People and Nature</i>, 3: 204-220. 
+      <a href="https://doi.org/10.1002/pan3.10168">View publication</a>
     </li>
   </ul>
     </div>
@@ -171,14 +171,15 @@
   <div class="publications-box">
   <h2>Programme Design & Impact</h2>
   <ul style="padding: 0; margin-top: 1.5rem;">
+    ***EMILY TO ADD / ANY OTHER SECTIONS RELEVANT TO HER***
     <li style="margin-bottom: 1rem;">
-      <b>Ducan EM</b> et al. (Year). Title of programme development paper 1. <i>Journal Name.</i> <a href="#">View publication</a>
+      <b>Duncan EM</b> et al. (Year). Title of paper 1. <i>Journal Name.</i> <a href="#">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Ducan EM</b> et al. (Year). Title of programme development paper 2. <i>Journal Name.</i> <a href="#">View publication</a>
+      <b>Duncan EM</b> et al. (Year). Title of paper 2. <i>Journal Name.</i> <a href="#">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Ducan EM</b> et al. (Year). Title of programme development paper 3. <i>Journal Name.</i> <a href="#">View publication</a>
+      <b>Duncan EM</b> et al. (Year). Title of paper 3. <i>Journal Name.</i> <a href="#">View publication</a>
     </li>
   </ul>
     </div>
