--- a/services.html
+++ b/services.html
@@ -117,7 +117,7 @@
         <li><strong>Capacity building & community engagement</strong> – Including work focused on gender, equality and inclusive participation in environmental initiatives.</li>
       </ul>
     </div>
-    <img src="images/general-consultancy.jpg" alt="" class="sidepicture-image">
+    <img src="images/ocean-plastic.jpg" alt="" class="sidepicture-image">
   </div>
 </section>
 
