--- a/services.html
+++ b/services.html
@@ -67,7 +67,7 @@
         <li><strong>Analysis of digital data sources</strong> - Including integrating large-scale survey data with social media and other digital data sources to better understand <a href="https://doi.org/10.1002/pan3.10381">how people engage with nature</a>.</li>
       </ul>
     </div>
-    <img src="images/social-science.jpg" alt="" class="sidepicture-image">
+    <img src="images/fishing-africa.jpg" alt="" class="sidepicture-image">
   </div>
 </section>
 
