--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
       <strong>relevant</strong> to real-world decisions.
     </p>
     <p>
-      We partner with <strong>NGOs</strong>, <strong>government agencies</strong>, and 
+      We partner with <strong>NGOs</strong>, <strong>government agencies</strong> and 
       <strong>research institutions</strong>, bringing <strong>expertise</strong> and 
       <strong>capacity</strong> to deliver projects that might not otherwise be possible.
     </p>
