--- a/services.html
+++ b/services.html
@@ -29,7 +29,8 @@
 </h1>
 
   <div style="padding-left: 15%; padding-right: 15%;">
-  <p>We offer a range of services that reflect our experience across both land and sea, combining ecological science with insights from the social sciences, as well as expertise in data, evidence, and programme design.</p>
+  <p>We offer a range of services that reflect our experience across both land and sea, combining ecological science with insights from the social sciences, 
+    as well as expertise in data, evidence, and programme design.</p>
   <p>Whether it's understanding habitats, working with communities, or bringing together different kinds of knowledge, 
   we take an integrated approach to environmental challenges.</p>
 </div>
