--- a/services.html
+++ b/services.html
@@ -29,10 +29,10 @@
 </h1>
 
   <div style="padding-left: 15%; padding-right: 15%;">
-  <p>We offer a range of services that reflect our experience across both land and sea, combining ecological science with insights from the social sciences, 
-    as well as expertise in data, evidence, and programme design.</p>
-  <p>Whether it's understanding habitats, working with communities, or bringing together different kinds of knowledge, 
-  we take an integrated approach to environmental challenges.</p>
+  <p>We offer a range of services that reflect our experience across both land and sea, combining ecological science with social research, 
+    and drawing on expertise in data, evidence, and programme design.</p>
+    <p>From understanding habitats to working with communities, 
+      we draw on different kinds of knowledge to tackle environmental challenges in a thoughtful and practical way.</p>
 </div>
 
 </div>
