--- a/publications.html
+++ b/publications.html
@@ -171,7 +171,7 @@
   <div class="publications-box">
   <h2>Programme Design & Impact</h2>
   <ul style="padding: 0; margin-top: 1.5rem;">
-    ***EMILY TO ADD / ANY OTHER SECTIONS RELEVANT TO HER***
+    ***EMILY TO EDIT / ANY OTHER SECTIONS RELEVANT TO HER***
     <li style="margin-bottom: 1rem;">
       <b>Duncan EM</b> et al. (Year). Title of paper 1. <i>Journal Name.</i> <a href="#">View publication</a>
     </li>
