--- a/services.html
+++ b/services.html
@@ -61,7 +61,7 @@
     <div class="sidepicture-text">
       <h2>2. Social Science Approaches</h2>
       <p>By revealing people's attitudes, motivations and behaviours, we can help you to shape more effective and inclusive strategies - in nature conservation and beyond.</p>
-      <p>We have experience with a range of social science methods, including...</p>
+      <p>We have experience with a range of social science methods...</p>
       <ul>
         <li><strong>Questionnaire design</strong> - Including developing surveys <a href="https://doi.org/10.1002/pan3.70014">of 18,000 adults across England</a> with Natural England, and of public attitudes and behaviours <a href="https://doi.org/10.1002/pan3.10168">relating to pollinators</a>.</li>
         <li><strong>Stakeholder interviews & focus groups</strong> - Including to guide the development of a conservation strategy <a href="https://doi.org/10.1002/2688-8319.12198">for hazel dormouse</a>.</li>
