--- a/publications.html
+++ b/publications.html
@@ -43,7 +43,7 @@
     <h2>Recent Projects</h2>
     <ul style="padding: 0; margin-top: 1.5rem;">
       <li style="margin-bottom: 1rem;">
-        <b>Phillips</b> (2025). Environmental connections between forests and oceans. 
+        <b>Phillips BB</b> (2025). Environmental connections between forests and oceans. 
         <i>A scoping review for the Woodland Trust</i>. 
         <a href="https://www.rainforestrecovery.org.uk/news/oceans-and-forests-a-new-discovery">View publication</a>
       </li>
