--- a/services.html
+++ b/services.html
@@ -122,6 +122,16 @@
   </div>
 </section>
 
+  <section style="max-width: 800px; margin: 3rem auto; text-align: center;">
+    <h2>Need something else?</h2>
+  <p>
+    If you have a project in mind that isn’t listed above, we’d love to <a href="contact.html">hear from you</a>.
+  </p>
+  <p>
+    We’re always happy to discuss your needs and help you find the right next steps.
+  </p>
+</section>
+
   <footer>
   <p class="footer-contact">
     <a href="https://www.linkedin.com/in/benjamin-b-phillips/" target="_blank" class="footer-icon linkedin" aria-label="Ben's LinkedIn"></a>
