--- a/services.html
+++ b/services.html
@@ -121,17 +121,17 @@
     <img src="images/ocean-plastic.jpg" alt="" class="sidepicture-image">
   </div>
 </section>
-
+  
   <section style="max-width: 800px; margin: 3rem auto; text-align: center;">
-    <h2>Need something else?</h2>
-  <p>
-    If you have a project in mind that isn’t listed above, we’d love to <a href="contact.html">hear from you</a>.
-  </p>
-  <p>
-    We’re always happy to discuss your needs and help you find the right next steps.
-  </p>
-</section>
-
+    <h2>Need Something Else?</h2>
+    <p>
+      If what you need isn’t covered above, feel free to <a href="contact.html">get in touch</a>.
+    </p>]
+    <p>
+      We’ll be happy to discuss your requirements and help you find the right next steps.
+    </p>
+  </section>
+  
   <footer>
   <p class="footer-contact">
     <a href="https://www.linkedin.com/in/benjamin-b-phillips/" target="_blank" class="footer-icon linkedin" aria-label="Ben's LinkedIn"></a>
