--- a/services.html
+++ b/services.html
@@ -125,7 +125,7 @@
   <section style="max-width: 800px; margin: 3rem auto; text-align: center;">
     <h2>Need Something Else?</h2>
     <p>
-      If what you need isn’t covered above, feel free to <a href="contact.html">get in touch</a>.
+      If what you need isn’t listed above, feel free to <a href="contact.html">get in touch</a>.
     </p>
     <p>
       We’ll be happy to discuss your requirements and help you find the right next steps.
