--- a/publications.html
+++ b/publications.html
@@ -30,7 +30,7 @@
 
   <div style="padding-left: 15%; padding-right: 15%;">
  <p>
-    In collaboration with many colleagues and partner organisations, we’ve authored over 50 academic papers — cited more than 3,000 times — 
+    In collaboration with many colleagues and partner organisations, we’ve published over 50 academic papers — cited more than 3,000 times — 
     alongside reports for a wide range of audiences.</p>
     <p>Below is a selection of these publications, covering topics such as pollinator conservation, road verges, marine plastic pollution, and social science in conservation.</p>
   </p>
