--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
 </h1>
   <p style="max-width: 600px; margin: 0.5rem auto 1.5rem;">
-    We'd love to hear from you if you have a project in mind or simply want to learn more about how we can support your work.
+    We'd love to hear from you if you have a project in mind, or if you simply want to learn more about how we can support your work.
   </p>
 
   <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 3rem; align-items: center;">
