--- a/services.html
+++ b/services.html
@@ -48,7 +48,7 @@
 <ul>
   <li><strong>Ecological studies</strong> - We can design and carry out surveys and experiments to help answer your ecological questions.
   <li><strong>Habitat and land management</strong> – With particular expertise relating to road verges, public green spaces, farmland, and pollinator habitats.</li>
-  <li><strong>Marine conservation</strong> – With particular expertise relating to marine megafauna, fisheries, and the impacts of microplastics.</li>
+  <li><strong>Marine conservation</strong> – With particular expertise relating to marine megafauna conservation, fisheries waste, and monitoring of plastic pollution.</li>
 </ul>
       
     </div>
