--- a/services.html
+++ b/services.html
@@ -76,11 +76,11 @@
   <div class="sidepicture-section">
     <div class="sidepicture-text">
       <h2>3. Evidence Synthesis</h2>
-      <p>We are experienced in synthesising evidence to a rigorous scientific standard, helping you to make informed decisions based on the best available knowledge.</p>
+      <p>We are experienced in synthesising evidence to a rigorous scientific standard - from horizon scanning to systematic reviews - helping you to make informed decisions based on the best available knowledge.</p>
       <p>Our work spans a wide variety of ecological and environmental topics, with experience reviewing and summarising evidence on issues spanning...</p>
       <ul>
         <li>Environmental links between <a href="https://www.rainforestrecovery.org.uk/news/oceans-and-forests-a-new-discovery">forests and oceans</a> for The Woodland Trust.</li>
-        <li>Plastic pollution and <a href="https://doi.org/10.3354/esr00865">marine turtle entanglements</a>.</li>
+        <li>Interactions between marine plastic pollution and <a href="https://doi.org/10.3354/esr00865"> turtles</a> / <a href="https://doi.org/10.1016/j.scitotenv.2023.162502">other megafauna</a>.
         <li>Enhancing road verges <a href="https://doi.org/10.1016/j.biocon.2020.108687">for pollinators</a> (with the conservation charity Buglife), and for broader <a href="https://doi.org/10.1111/1365-2664.13556">ecosystem services</a> (e.g. air quality, climate regulation, aesthetics).</li> 
       </ul>
     </div>
