--- a/services.html
+++ b/services.html
@@ -116,7 +116,7 @@
         <li><strong>Grant writing</strong> – With experience as both applicants and reviewers, we can help craft clear, compelling proposals that resonate with funders.</li>
         <li><strong>Project management</strong> – Supporting the design, coordination and delivery of scientific research programmes and related activities, 
           including assisting with reporting and monitoring, evaluation and learning (MEL).</li>
-        <li><strong>Capacity building & community engagement</strong> – Including work focused on gender, equality and inclusive participation in environmental initiatives.</li>
+        <li><strong>Capacity building & community engagement</strong> – Including work focused on gender, equality and social inclusion in environmental initiatives.</li>
       </ul>
     </div>
     <img src="images/ocean-plastic.jpg" alt="" class="sidepicture-image">
