--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
     <p style="margin-top: 1.5rem;">🛠️ <b>Consultancy & Data Services</b> – We provide support with grant writing, programme development, 
       data analysis, and other consultancy services, to support effective, evidence-based conservation.</p>
   </div>
-  <img src="images/road-verge.jpg" alt="Our Work Areas" class="sidepicture-image">
+  <img src="images/verge-emily-earth.jpg" alt="Our Work Areas" class="sidepicture-image">
 </div>
 
     <p style="text-align: center; margin-top: 1.5rem;">
