--- a/services.html
+++ b/services.html
@@ -80,7 +80,7 @@
       <p>Our work spans a wide variety of ecological and environmental topics, with experience reviewing and summarising evidence on issues spanning...</p>
       <ul>
         <li>Environmental links between <a href="https://www.rainforestrecovery.org.uk/news/oceans-and-forests-a-new-discovery">forests and oceans</a> for The Woodland Trust.</li>
-        <li>Interactions between marine plastic pollution and <a href="https://doi.org/10.3354/esr00865"> turtles</a> / <a href="https://doi.org/10.1016/j.scitotenv.2023.162502">other megafauna</a>.
+        <li>Interactions between marine plastic pollution and <a href="https://doi.org/10.3354/esr00865"> turtles</a> and <a href="https://doi.org/10.1016/j.scitotenv.2023.162502">other megafauna</a>.
         <li>Enhancing road verges <a href="https://doi.org/10.1016/j.biocon.2020.108687">for pollinators</a> (with the conservation charity Buglife), and for broader <a href="https://doi.org/10.1111/1365-2664.13556">ecosystem services</a> (e.g. air quality, climate regulation, aesthetics).</li> 
       </ul>
     </div>
