--- a/publications.html
+++ b/publications.html
@@ -132,13 +132,29 @@
   <ul style="padding: 0; margin-top: 1.5rem;">
     ***EMILY TO ADD / ANY OTHER SECTIONS RELEVANT TO HER***
     <li style="margin-bottom: 1rem;">
-      <b>Duncan EM</b> et al. (Year). Title of paper 1. <i>Journal Name.</i> <a href="#">View publication</a>
+      <b>Duncan EM</b> et al. (2023). Predicting the distribution and abundance of abandoned, lost or discarded fishing gear (ALDFG) in the deep sea of the Azores (North Atlantic) 
+      <i>Science of The Total Environment</i>, 900: 166579.
+      <a href="https://doi.org/10.1016/j.scitotenv.2023.166579">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Duncan EM</b> et al. (Year). Title of paper 2. <i>Journal Name.</i> <a href="#">View publication</a>
+      Ramilo-Henry M, Umbelina B, Matilde E & <b>Duncan EM</b> (2023). Plastic pollution on remote islands: A baseline study of Príncipe, Gulf of Guinea. 
+      <i>Marine Environmental Research</i>, 191: 106181. 
+      <a href="https://doi.org/10.1016/j.marenvres.2023.106181">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Duncan EM</b> et al. (Year). Title of paper 3. <i>Journal Name.</i> <a href="#">View publication</a>
+      <b>Duncan EM</b> et al. (2021). Plastic pollution and small juvenile marine turtles: a potential evolutionary trap. 
+      <i>Frontiers in Marine Science</i>, 8: 699521. 
+      <a href="https://doi.org/10.3389/fmars.2021.699521">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Duncan EM</b> et al. (Year). Message in a bottle: Open source technology to track the movement of plastic pollution 
+      <i>PLOS ONE</i>, 15: e0242459.
+      <a href="https://doi.org/10.1371/journal.pone.0242459">View publication</a>
+    </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Duncan EM</b> et al. (Year). Microplastic ingestion ubiquitous in marine turtles. 
+      <i>Global Change Biology</i>, 25: 744-752. 
+      <a href="https://doi.org/10.1111/gcb.14519">View publication</a>
     </li>
   </ul>
     </div>
