--- a/publications.html
+++ b/publications.html
@@ -162,7 +162,7 @@
 
   <section>
   <div class="publications-box">
-  <h2>Social Science in Conservation</h2>
+  <h2>Understanding people's attitudes and behaviours</h2>
   <ul style="padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
       <b>Duncan EM</b>, <b>Phillips BB</b>, et al. (in prep). Discarded fishing nets and marine megafauna entanglements in Príncipe, Gulf of Guinea: 
