--- a/services.html
+++ b/services.html
@@ -63,9 +63,10 @@
       <p>By revealing people's attitudes, motivations and behaviours, we can help you to shape more effective and inclusive strategies - in nature conservation and beyond.</p>
       <p>We have experience with a range of social science methods...</p>
       <ul>
-        <li><strong>Questionnaire design</strong> - Including developing surveys <a href="https://doi.org/10.1002/pan3.70014">of 18,000 adults across England</a> with Natural England, and of public attitudes and behaviours <a href="https://doi.org/10.1002/pan3.10168">relating to pollinators</a>.</li>
-        <li><strong>Stakeholder interviews & focus groups</strong> - Including to guide the development of a conservation strategy <a href="https://doi.org/10.1002/2688-8319.12198">for hazel dormouse</a>.</li>
-        <li><strong>Analysis of digital data sources</strong> - Including integrating large-scale survey data with social media and other digital data sources to better understand <a href="https://doi.org/10.1002/pan3.10381">how people engage with nature</a>.</li>
+        <li><strong>Questionnaire design</strong> - Including developing surveys <a href="https://doi.org/10.1002/pan3.70014" target="_blank" rel="noopener noreferrer">of 18,000 adults across England</a> with Natural England, 
+          and of public attitudes and behaviours <a href="https://doi.org/10.1002/pan3.10168" target="_blank" rel="noopener noreferrer">relating to pollinators</a>.</li>
+        <li><strong>Stakeholder interviews & focus groups</strong> - Including to guide the development of a conservation strategy <a href="https://doi.org/10.1002/2688-8319.12198" target="_blank" rel="noopener noreferrer">for hazel dormouse</a>.</li>
+        <li><strong>Analysis of digital data sources</strong> - Including integrating large-scale survey data with social media and other digital data sources to better understand <a href="https://doi.org/10.1002/pan3.10381" target="_blank" rel="noopener noreferrer">how people engage with nature</a>.</li>
       </ul>
     </div>
     <img src="images/fishing-africa.jpg" alt="" class="sidepicture-image">
@@ -79,9 +80,9 @@
       <p>We are experienced in synthesising evidence to a rigorous scientific standard - from horizon scanning to systematic reviews - helping you to make informed decisions based on the best available knowledge.</p>
       <p>Our work spans a wide variety of ecological and environmental topics, with experience reviewing and summarising evidence on issues spanning...</p>
       <ul>
-        <li>Environmental links between <a href="https://www.rainforestrecovery.org.uk/news/oceans-and-forests-a-new-discovery">forests and oceans</a> for The Woodland Trust.</li>
-        <li>Interactions between marine plastic pollution and <a href="https://doi.org/10.3354/esr00865"> turtles</a> and <a href="https://doi.org/10.1016/j.scitotenv.2023.162502">other megafauna</a>.
-        <li>Enhancing road verges <a href="https://doi.org/10.1016/j.biocon.2020.108687">for pollinators</a> (with the conservation charity Buglife), and for broader <a href="https://doi.org/10.1111/1365-2664.13556">ecosystem services</a> (e.g. air quality, climate regulation, aesthetics).</li> 
+        <li>Environmental links between <a href="https://www.rainforestrecovery.org.uk/news/oceans-and-forests-a-new-discovery" target="_blank" rel="noopener noreferrer">forests and oceans</a> for The Woodland Trust.</li>
+        <li>Interactions between marine plastic pollution and <a href="https://doi.org/10.3354/esr00865" target="_blank" rel="noopener noreferrer"> turtles</a> and <a href="https://doi.org/10.1016/j.scitotenv.2023.162502" target="_blank" rel="noopener noreferrer">other megafauna</a>.
+        <li>Enhancing road verges <a href="https://doi.org/10.1016/j.biocon.2020.108687" target="_blank" rel="noopener noreferrer">for pollinators</a> (with the conservation charity Buglife), and for broader <a href="https://doi.org/10.1111/1365-2664.13556" target="_blank" rel="noopener noreferrer">ecosystem services</a> (e.g. air quality, climate regulation, aesthetics).</li> 
       </ul>
     </div>
     <img src="images/evidence-synthesis.jpg" alt="" class="sidepicture-image">
@@ -97,8 +98,8 @@
       <p>Our expertise includes spatial mapping and analysis using Geographical Information Systems (GIS), and the handling of large or messy datasets.</p>
       <p>Examples of our past experience include...</p>
       <ul>
-        <li><a href="https://doi.org/10.1016/j.landurbplan.2021.104159">Remotely assessing road verge habitats</a> using Google Earth and Street View.</li>
-        <li><a href="https://doi.org/10.1016/j.scitotenv.2021.145589">Modelling road pollution</a> across Great Britain.</li>
+        <li><a href="https://doi.org/10.1016/j.landurbplan.2021.104159" target="_blank" rel="noopener noreferrer">Remotely assessing road verge habitats</a> using Google Earth and Street View.</li>
+        <li><a href="https://doi.org/10.1016/j.scitotenv.2021.145589" target="_blank" rel="noopener noreferrer">Modelling road pollution</a> across Great Britain.</li>
         <li>Comparing light pollution levels across UK local authorities and habitats.</li>
       </ul>
     </div>
@@ -135,9 +136,9 @@
   
   <footer>
   <p class="footer-contact">
-    <a href="https://www.linkedin.com/in/benjamin-b-phillips/" target="_blank" class="footer-icon linkedin" aria-label="Ben's LinkedIn"></a>
+    <a href="https://www.linkedin.com/in/benjamin-b-phillips/" target="_blank" rel="noopener noreferrer" class="footer-icon linkedin" aria-label="Ben's LinkedIn"></a>
     <a href="mailto:bphillips.consultancy@gmail.com" class="footer-icon email" aria-label="Email Ben and Emily"></a>
-    <a href="https://www.linkedin.com/in/emily-duncan-7a324b64" target="_blank" class="footer-icon linkedin" aria-label="Emily's LinkedIn"></a>
+    <a href="https://www.linkedin.com/in/emily-duncan-7a324b64" target="_blank" rel="noopener noreferrer" class="footer-icon linkedin" aria-label="Emily's LinkedIn"></a>
   </p>
     <p>&copy; 2025 Apex Science & Conservation Consultancy. All rights reserved.</p>
 </footer>
