--- a/about.html
+++ b/about.html
@@ -91,9 +91,9 @@
 
   <footer>
   <p class="footer-contact">
-    <a href="https://www.linkedin.com/in/benjamin-b-phillips/" target="_blank" class="footer-icon linkedin" aria-label="Ben's LinkedIn"></a>
+    <a href="https://www.linkedin.com/in/benjamin-b-phillips/" target="_blank" rel="noopener noreferrer" class="footer-icon linkedin" aria-label="Ben's LinkedIn"></a>
     <a href="mailto:bphillips.consultancy@gmail.com" class="footer-icon email" aria-label="Email Ben and Emily"></a>
-    <a href="https://www.linkedin.com/in/emily-duncan-7a324b64" target="_blank" class="footer-icon linkedin" aria-label="Emily's LinkedIn"></a>
+    <a href="https://www.linkedin.com/in/emily-duncan-7a324b64" target="_blank" rel="noopener noreferrer" class="footer-icon linkedin" aria-label="Emily's LinkedIn"></a>
   </p>
     <p>&copy; 2025 Apex Science & Conservation Consultancy. All rights reserved.</p>
 </footer>
