--- a/contact.html
+++ b/contact.html
@@ -34,20 +34,20 @@
   <div style="display: flex; justify-content: center; flex-wrap: wrap; gap: 3rem; align-items: center;">
 
     <div>
-      <a href="mailto:bphillips.consultancy@gmail.com" style="text-decoration: none; color: inherit;">
-        <img src="images/email.png" alt="Email icon" style="width: 36px; height: 36px; margin-bottom: 0.5rem;">
-        <p style="margin: 0; font-weight: 500;">bphillips.consultancy@gmail.com</p>
-      </a>
-    </div>
+  <a href="mailto:bphillips.consultancy@gmail.com" style="text-decoration: none; color: inherit;" aria-label="Email us">
+    <img src="images/email.png" alt="Email us" style="width: 36px; height: 36px; margin-bottom: 0.5rem;">
+    <p style="margin: 0; font-weight: 500;">bphillips.consultancy@gmail.com</p>
+  </a>
+</div>
 
-    <div>
-      <img src="images/linkedin.png" alt="LinkedIn icon" style="width: 36px; height: 36px; margin-bottom: 0.5rem;">
-      <p style="margin: 0; font-weight: 500;">
-        Connect on LinkedIn:
-        <a href="https://www.linkedin.com/in/benjamin-b-phillips/">Ben</a> /
-        <a href="https://www.linkedin.com/in/emily-duncan-7a324b64">Emily</a>
-      </p>
-    </div>
+<div>
+  <img src="images/linkedin.png" alt="LinkedIn icon" style="width: 36px; height: 36px; margin-bottom: 0.5rem;">
+  <p style="margin: 0; font-weight: 500;">
+    Connect on LinkedIn:
+    <a href="https://www.linkedin.com/in/benjamin-b-phillips/" target="_blank" rel="noopener noreferrer">Ben</a> /
+    <a href="https://www.linkedin.com/in/emily-duncan-7a324b64" target="_blank" rel="noopener noreferrer">Emily</a>
+  </p>
+</div>
 
   </div>
 </section>
