--- a/publications.html
+++ b/publications.html
@@ -32,7 +32,7 @@
  <p>
     In collaboration with many colleagues and partner organisations, we’ve published over 50 academic papers — cited more than 3,000 times — 
     alongside reports for a wide range of audiences.</p>
-    <p>Below is a selection of these publications, covering topics such as pollinator conservation, road verges, marine plastic pollution, and social science in conservation.</p>
+    <p>Below is a selection of these publications, covering topics such as pollinator conservation, road verges, marine plastic pollution, and public engagement with nature.</p>
   </p>
 
 </div>
