--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
     <div class="sidepicture-section">
   <div class="sidepicture-text">
     <h2>Our work spans three key areas...</h2>
-    <p>🌿 <b>Ecological Systems</b> - We conduct ecological surveys and experiments, GIS mapping and analysis,
+    <p>🌿 <b>Ecological Systems</b> - We conduct ecological surveys / experiments, GIS mapping / analysis,
       and evidence reviews, to inform conservation from urban greenspaces and farmland to forests and oceans.</p>
     <p style="margin-top: 1.5rem;">🔍 <b>People & Nature</b> - We explore how people engage with nature - their attitudes, values and behaviours - 
       using surveys, interviews and digital data sources, to help shape more effective and inclusive conservation strategies.</p>
