--- a/about.html
+++ b/about.html
@@ -72,15 +72,16 @@
       <h3 style="margin-top: 0;">Dr Ben Phillips</h3>
       <p>Ben is a nature conservation scientist with over 10 years’ experience delivering applied research that 
         supports biodiversity, informs land management, and connects people with nature.</p>
-      <p>His work combines ecological and social sciences using a collaborative, solution-focused approach. 
+      <p>His work combines ecological and social sciences using a collaborative, solution-focused approach - 
+        partnering with NGOs, government agencies, and research institutions to co-produce research that is both scientifically rigorous and directly relevant to real-world decisions.
         Particular focuses have included pollinator conservation, management of road verges, and understanding 
-        people's attitudes and behaviour relating to nature.</p>
+        people's attitudes and behaviours relating to nature.</p>
     </div>
 
     <div style="flex: 1 1 45%; max-width: 45%; text-align: center;">
       <img src="images/photo-emily.jpg" alt="Dr Emily Duncan" style="height: 100%; max-height: 350px; width: auto; border-radius: 8px; margin-bottom: 1rem;">
       <h3 style="margin-top: 0;">Dr Emily Duncan</h3>
-      <p>Emily is a marine conservation scientist with more than a decade of experience carrying out research as a team member of numerous expeditions.</p>
+      <p>Emily is a marine conservation scientist with more than a decade of experience carrying out research, including as a team member for numerous expeditions.</p>
       <p>Much of her work has focused on marine megafauna and plastic pollution, for which she was named on the Forbes 30 Under 30 list. 
         Emily is experienced in delivering large collaborative international projects, and feels passionately about combining high-quality science and conservation 
         with community engagement. She currently sits on the expert panel for DEFRA’s Ocean Community Empowerment and Nature (OCEAN) Grants Programme.</p>
