--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
       <p>Ben is a nature conservation scientist with over 10 years’ experience delivering applied research that 
         supports biodiversity, informs land management, and connects people with nature.</p>
       <p>His work combines ecological and social sciences using a collaborative, solution-focused approach - 
-        partnering with NGOs, government agencies, and research institutions to co-produce research that is both scientifically rigorous and directly relevant to real-world decisions.
+        partnering with NGOs, government agencies, and research institutions to co-produce research that is both scientifically rigorous and impactful. 
         Particular focuses have included pollinator conservation, management of road verges, and understanding 
         people's attitudes and behaviours relating to nature.</p>
     </div>
