--- a/services.html
+++ b/services.html
@@ -32,7 +32,7 @@
   <p>We offer a range of services that reflect our experience across both land and sea, combining ecological science with social research, 
     and drawing on expertise in data, evidence, and programme design.</p>
     <p>From understanding habitats to working with communities, 
-      we bring together diverse kinds of knowledge to tackle environmental challenges in a practical and thoughtful way.</p>
+      we bring together diverse kinds of knowledge to tackle environmental challenges in a thoughtful and practical way.</p>
 </div>
 
 </div>
