--- a/services.html
+++ b/services.html
@@ -80,7 +80,7 @@
       <p>We are experienced in synthesising evidence to a rigorous scientific standard - from horizon scanning to systematic reviews - helping you to make informed decisions based on the best available knowledge.</p>
       <p>Our work spans a wide variety of ecological and environmental topics, with experience reviewing and summarising evidence on issues spanning...</p>
       <ul>
-        <li>Environmental links between <a href="https://www.rainforestrecovery.org.uk/news/oceans-and-forests-a-new-discovery" target="_blank" rel="noopener noreferrer">forests and oceans</a> for The Woodland Trust.</li>
+        <li>Environmental links between <a href="https://www.rainforestrecovery.org.uk/news/oceans-and-forests-a-new-discovery" target="_blank" rel="noopener noreferrer">forests and oceans</a>, for The Woodland Trust.</li>
         <li>Interactions between marine plastic pollution and <a href="https://doi.org/10.3354/esr00865" target="_blank" rel="noopener noreferrer"> turtles</a> / <a href="https://doi.org/10.1016/j.scitotenv.2023.162502" target="_blank" rel="noopener noreferrer">other megafauna</a>.
         <li>Enhancing road verges <a href="https://doi.org/10.1016/j.biocon.2020.108687" target="_blank" rel="noopener noreferrer">for pollinators</a> (with the conservation charity Buglife), and for broader <a href="https://doi.org/10.1111/1365-2664.13556" target="_blank" rel="noopener noreferrer">ecosystem services</a> (e.g. air quality, climate regulation, aesthetics).</li> 
       </ul>
